# Anomaly-Detection-in-Financial-Transactions

./: .gitignore  README.md  pyproject.toml
notebook/: 01 Data Collection.ipynb  03 Data Cleaning.ipynb
src/utils/: exception.py
